Line dash pattern instructions containing many entries are not shown correctly on Okular
SUMMARY
Line dash patterns (PDF 1.7 spec section 8.4.3.6) contain a dash array and a phase. It seems that okular has problems if the dash array contains too many entries. And from looking at the result it seems to just use a certain number of entries and cuts the rest off.
Evince and acroread 9 on Linux work just fine, displaying the PDF in question like the reference image (except for the color).
I was told that this would be a poppler bug: https://bugs.kde.org/show_bug.cgi?id=457494
STEPS TO REPRODUCE
- Load the attached PDF in okular.
OBSERVED RESULT
The QRCode is invalid and is not the same as the reference image .
EXPECTED RESULT
The QRCode should be equal to the one in the reference image.
SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 22.04
(available in About System)
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3