Do not truncate line dash patterns with more than 20 entries

Because otherwise files with longer patterns will not render
correctly.  One example is the file in

  https://gitlab.freedesktop.org/poppler/poppler/-/issues/1281

Fixes: 1281